# geiss

./: CMakeLists.txt  CPU_MHZ.H  CPU_TYPE.H  CYRIX.H  DEFINES.H  Effects.h  GETDXVER.H  LICENSE  Proc_map.h  README.md  Resource.aps  Resource.rc  Resource.res  SOUND.CPP  SOUND.H  Sysstuff.h  VIS.H  build_installer_PLUGIN.bat  helper.cpp  helper.h  installer_PLUGIN.nsi  main.cpp  outsound.cpp  outsound.h  plugin.plg  plugin.sln  plugin.vcproj  proc_map.cpp  resource.h  saver.opt  saver.sln  saver.vcproj  video.h
.github/: dependabot.yml
.github/workflows/: windows-msvc.yml
bin_plugin/: geiss_about.txt  geiss_faq.txt  geiss_whatsnew.txt
bin_saver/: geiss.scr  geiss_about.txt  geiss_faq.txt  geiss_whatsnew.txt
